# rust-decision-tree

./: .gitignore  Cargo.toml  README.md  Untitled.ipynb  Untitled1.ipynb  breast_cancer.csv  creacion dataset.ipynb  data copy.csv  data.csv  data.out  decision_tree.ipynb  dtree.py  graficos_profiling.ipynb  heart.csv  inspeccion datos.ipynb  iris.csv  output.pickle  profile.json  profiling.txt  profiling_gini_before_changes.csv  synthetic.csv  test-file.txt  tiempos_rust.py  times.out
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  creacion dataset-checkpoint.ipynb  decision_tree-checkpoint.ipynb  graficos_profiling-checkpoint.ipynb  inspeccion datos-checkpoint.ipynb
decision-tree/: Cargo.toml  Untitled.ipynb  Untitled1.ipynb  iris.csv  test-file.txt
decision-tree/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb
decision-tree/src/: dtree.rs  main.rs  random_forest.rs  utils.rs
decision-tree/src/dtree/: utils.rs
src/: dtree.rs  main.rs  main_old.rs  random_forest.rs  utils.rs
src/dtree/: utils.rs
