[package]
name = "decision-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["wee_alloc"]



[dependencies]
rayon = "*"
csv="*"
rand="*"
serde = { version = "1.0.144", features = ["derive"] }
serde-pickle = "1.0"
wee_alloc = { version = "0.4.5", optional = true }
array_tool = "1.0.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true
codegen-units = 1
debug = 1
panic = "abort"